todo listo para empezar

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-bs-theme="dark">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
@@ -25,6 +25,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.6/css/bootstrap.min.css" integrity="sha512-Y4o9ui4SDy096Huuckv3bu6vfy3PG170S/EJO3fD13EJM4R2M5iDrTsDYKrm7U71j9IIupl1RJcBgd6caFbBIA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -38,6 +40,8 @@
 
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
+
     -->
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.6/js/bootstrap.bundle.min.js" integrity="sha512-TqV44vJ6VstCMM8ksoxkOy/xxO97sKJUSxOCgLdysw4QRw4kTVLwOmxlzRnutf6NuNMtt48UMJEMyZZ7hMMebQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   </body>
 </html>
